--- a/pokemon-world-tournament.cabal
+++ b/pokemon-world-tournament.cabal
@@ -64,6 +64,7 @@ executable pokemon-world-tournament
     -- Modules included in this executable, other than Main.
     other-modules:
                       PWT
+                      PWT.Menu
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
