Parsing now accounts physio's smart constructors type signature changes

--- a/pokemon-world-tournament.cabal
+++ b/pokemon-world-tournament.cabal
@@ -65,10 +65,10 @@ executable pokemon-world-tournament
     other-modules:
                       PWT
                       PWT.Menu
-                      Data.Internal.Pokemon
                       Data.Internal.Type
                       Data.Stats
                       Data.Units
+                      Data.Pokemon.Attr
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
