--- a/pokemon-world-tournament.cabal
+++ b/pokemon-world-tournament.cabal
@@ -69,6 +69,7 @@ executable pokemon-world-tournament
                       Data.Stats
                       Data.Units
                       Data.Pokemon.Attr
+                      Data.Pokemon
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
