--- a/pokemon-world-tournament.cabal
+++ b/pokemon-world-tournament.cabal
@@ -70,7 +70,9 @@ executable pokemon-world-tournament
                       Data.Units
                       Data.Pokemon.Attr
                       Data.Pokemon
-                      PWT.Pokemon
+                      Party.Gender
+                      Champions.Pokemon
+                      Champions.Item
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -83,7 +85,8 @@ executable pokemon-world-tournament
                       recursion-schemes >= 5.2.3,
                       bytestring >= 0.11.5.2,
                       text >= 2.0.2,
-                      scientific >= 0.3.8
+                      scientific >= 0.3.8,
+                      random >= 1.3.1
 
     -- Directories containing source files.
     hs-source-dirs:   app, src
