First draft of damage as an intermediate AST

--- a/pokemon-world-tournament.cabal
+++ b/pokemon-world-tournament.cabal
@@ -73,6 +73,7 @@ executable pokemon-world-tournament
                       Party.Gender
                       Champions.Pokemon
                       Champions.Item
+                      Damage.Core
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
